karpenter-mpol/add-karpenter-donot-disrupt/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: add-karpenter-donot-disrupt
policies:
- ../add-karpenter-donot-disrupt.yaml
resources:
- resource.yaml
results:
- kind: CronJob
  patchedResources: patched02.yaml
  policy: add-karpenter-donot-disrupt
  resources:
  - addcronjob01
  result: pass
  isMutatingPolicy: true
- kind: Job
  patchedResources: patched01.yaml
  policy: add-karpenter-donot-disrupt
  resources:
  - addjob01
  result: pass
  isMutatingPolicy: true
